007. Validación de datos en tu aplicación web con Spring Boot/spring-rest-validation/src/main/java/com/example/error/ProductExceptionHandler.java
package com.example.error;

import org.springframework.core.Ordered;
import org.springframework.core.annotation.Order;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
@Order(Ordered.HIGHEST_PRECEDENCE)
public class ProductExceptionHandler {


}
